# imperal-matomo-analytics-extension

./: .gitignore  README.md  api_client.py  app.py  audience_helpers.py  compare_render.py  handlers_audience.py  handlers_channels.py  handlers_demographics.py  handlers_detail.py  handlers_insights.py  handlers_reports.py  handlers_settings.py  handlers_traffic.py  imperal.json  main.py  panels_center.py  panels_render.py  panels_settings_render.py  panels_side.py  params.py  pyproject.toml  response_models.py  skeleton.py
docs/: extension.md
tests/: test_error_banner.py  test_handlers.py  test_matomo_analytics_api.py  test_mos_api.py  test_panels_center.py  test_webbee_agent.py
tests/e2e/: analytics.spec.ts  auth.setup.ts  playwright.config.ts
