[project]
name = "matomo-analytics"
version = "4.0.6"
description = "Matomo Analytics — traffic dashboard with visits, trends, top pages, sources, devices, AI referrers and AI insights"
requires-python = ">=3.11"
dependencies = ["imperal-sdk>=5.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
py-modules = [
    "main", "app", "api_client", "params",
    "handlers_traffic", "handlers_settings",
    "handlers_detail", "handlers_insights", "handlers_audience",
    "panels_side", "panels_render", "panels_center",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
